# my_alloc

./: .gitignore  CMakeLists.txt  CMakePresets.json  my_alloc.c  my_alloc.h
src/: CMakeLists.txt  my_alloc.c
tests/: CMakeLists.txt  data_integrity.c  seg_fault.c  utils.c  utils.h
